--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -19,7 +19,7 @@
                     </li>
 
                     <li class="contacts-links">
-                        <a class="contacts-text link" href="tel:+61(0) 383 766 284 ">+61(0) 383 766 284</a>
+                        <a class="contacts-text link" href="tel:+610383766284 ">+61(0) 383 766 284</a>
                         <a class="contacts-text link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
@@ -41,7 +41,7 @@
                     </li>
 
                     <li class="contacts-links">
-                        <a class="contacts-text link" href="tel:+61(0) 383 766 284 ">+61(0) 383 766 284</a>
+                        <a class="contacts-text link" href="tel:+610383766284 ">+61(0) 383 766 284</a>
                         <a class="contacts-text link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
@@ -63,7 +63,7 @@
                     </li>
 
                     <li class="contacts-links">
-                        <a class="contacts-text link" href="tel:+61(0) 383 766 284 ">+61(0) 383 766 284</a>
+                        <a class="contacts-text link" href="tel:+610383766284 ">+61(0) 383 766 284</a>
                         <a class="contacts-text link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </li>
                 </ul>
