--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -171,6 +171,17 @@
     margin: 0 10px;
   }
 }
+@media screen and (min-width: 1280px) {
+  .product-pink {
+    margin: 0 15px;
+  }
+  .product-coffee {
+    margin: 0 15px;
+  }
+  .product-green {
+    margin: 0 15px;
+  }
+}
 @media screen and (min-width: 768px) {
   .product-pink::before {
     width: 220px;
@@ -240,7 +251,10 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: cornflowerblue;
+    background-color: rgb(233, 204, 126);
+;
+;
+;
     min-width: 100%;
     height: 50%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
