--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -35,6 +35,9 @@
 .reviews-container {
   @extend %conteiner;
 }
+.container-contacts {
+  @extend %conteiner;
+}
 
 .footer-container {
   @extend %conteiner;
