--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,50 +1,52 @@
-<section  class="customer-reviews container">
-    <div class="customer-reviews--slide-block">
-        <div class="customer-reviews--slide">
-            <img class="customer-reviews--img"  src="./images/img-customer/girl1.png" alt="girl">
+<section  class="customer-reviews">
+    <div class="container">
+        <div class="customer-reviews--slide-block">
+            <div class="customer-reviews--slide">
+                <img class="customer-reviews--img"  src="./images/img-customer/girl1.png" alt="girl">
+                    <div class="customer-reviews--thumb">
+                        <svg class="customer-reviews--logo-kav">
+                            <use href="./images/sprite/sprite_projects.svg#kav"></use>
+                        </svg>
+                        <p class="customer-reviews--coments">
+                            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                            congue. Lorem ipsum primis in nibh vel risus.
+                        </p>
+                        <div class="dot"></div>
+                    
+                    </div>
+                    <p class="customer-reviews--comentator">Emily, Los Angeles</p>
+                    
+            </div>
+            <div class="customer-reviews--slide">
+                <img class="customer-reviews--img" src="./images/img-customer/girl2.png" alt="girl">
                 <div class="customer-reviews--thumb">
                     <svg class="customer-reviews--logo-kav">
                         <use href="./images/sprite/sprite_projects.svg#kav"></use>
                     </svg>
-                    <p class="customer-reviews--coments">
-                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                        congue. Lorem ipsum primis in nibh vel risus.
-                    </p>
+                    <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+                        hendrerit nulla quam nunc, accumsan
+                        congue. Lorem ipsum primis in nibh vel risus.</p>
                     <div class="dot"></div>
-                
+                    
                 </div>
                 <p class="customer-reviews--comentator">Emily, Los Angeles</p>
-                   
-        </div>
-        <div class="customer-reviews--slide">
-            <img class="customer-reviews--img" src="./images/img-customer/girl2.png" alt="girl">
-            <div class="customer-reviews--thumb">
+                
+            </div>
+            <div class="customer-reviews--slide">
+                <img class="customer-reviews--img" src="./images/img-customer/girl3.png" alt="girl">
+                <div class="customer-reviews--thumb">
                 <svg class="customer-reviews--logo-kav">
                     <use href="./images/sprite/sprite_projects.svg#kav"></use>
                 </svg>
-                <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+                    <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
                     hendrerit nulla quam nunc, accumsan
                     congue. Lorem ipsum primis in nibh vel risus.</p>
-                <div class="dot"></div>
+                    <div class="dot"></div>
+                    
                 
             </div>
             <p class="customer-reviews--comentator">Emily, Los Angeles</p>
-            
-        </div>
-        <div class="customer-reviews--slide">
-            <img class="customer-reviews--img" src="./images/img-customer/girl3.png" alt="girl">
-            <div class="customer-reviews--thumb">
-            <svg class="customer-reviews--logo-kav">
-                <use href="./images/sprite/sprite_projects.svg#kav"></use>
-            </svg>
-                <p class="customer-reviews--coments">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
-                hendrerit nulla quam nunc, accumsan
-                congue. Lorem ipsum primis in nibh vel risus.</p>
-                <div class="dot"></div>
-                
-            
-        </div>
-        <p class="customer-reviews--comentator">Emily, Los Angeles</p>
+            </div>
         </div>
     </div>
 </section>
