--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,12 +31,10 @@
                         <p class="hero-rest">cafes</p>
                        </div> 
 
-                       <div class="second-count">
+                        <div class="second-count">
                         <p class="hero-number">23</p>
                         <p class="hero-rest">food trucks</p> 
-                    </div>
-
-                    
+                        </div>
                 </div>
                 
                 <!-- END COUNT -->
@@ -131,8 +129,13 @@
                 <!-- </div> -->
                 <button class="btn__bio-title " type="button">
                     <svg class="arrow-icon_bio">
-                        <use href="./images/icon/sprite-arrow.svg#arrow-right"></use>
+
+                        <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
+                        <!-- <use href="./images/icon/sprite-arrow.svg#arrow-right"></use> -->
                     </svg>
+
+                    
+
                 </button>
             </div>
 
