--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -22,7 +22,7 @@
       padding-left: 36px;
       padding-right: 36px;
     }
-    @media screen and(min-width: 1200px) {
+    @media screen and(min-width: 1280px) {
       // width: 772px;
       width: 1050px;
       padding-left: 115px;
@@ -35,7 +35,11 @@
 .contacts {
   background: #fff5f6;
   background-repeat: no-repeat;
-  background-size: cover;
+  // background-size: cover;
+  background-size: contain;
+  background-position: center;
+
+
   background: linear-gradient(180deg, rgba(255,255,255,1) 6%, rgba(255,245,246,1) 6%);
   padding-bottom: 113px;
   
@@ -43,10 +47,11 @@
     padding-bottom: 158px;
     background: linear-gradient(180deg, rgba(255,255,255,1) 10%, rgba(255,245,246,1) 10%);
   }
-  @media screen and(min-width: 1200px) {
+  @media screen and(min-width: 1280px) {
+    
     padding-bottom: 165px;
-    background-image: url('../images/bg.png');
-    background: linear-gradient(180deg, rgba(255,255,255,1) 12%, rgba(255,245,246,1) 12%);
+    // background-image: url('../images/bg.png');
+    background: url('../images/bg.png'),  center, linear-gradient(180deg, rgba(255,255,255,1) 12%, rgba(255,245,246,1) 12%);
     }
 }
 
@@ -74,7 +79,7 @@
       margin-bottom: 81px;
     }
 
-      @media screen and(min-width: 1200px) {
+      @media screen and(min-width: 1280px) {
       width: 330px;
       height: 572px;
       margin-bottom: 86px;
@@ -94,7 +99,7 @@
       padding: 50px 32px;
     }
 
-      @media screen and(min-width: 1200px) {
+      @media screen and(min-width: 1280px) {
       padding-top: 51px;
       padding-bottom: 62px;
       padding-right: 44px;
@@ -131,7 +136,7 @@
       margin-bottom: 30px;
     }
 
-      @media screen and(min-width: 1200px) {
+      @media screen and(min-width: 1280px) {
       width: 73px;
       margin-bottom: 32px;
     }
@@ -161,7 +166,7 @@
        margin-bottom: 14px;
   }
 
-    @media screen and(min-width: 1200px) {
+    @media screen and(min-width: 1280px) {
       // width: 66px;
       height: 30px;
 
@@ -191,7 +196,7 @@
       /* or 23px */
 }
 
-    @media screen and(min-width: 1200px) {
+    @media screen and(min-width: 1280px) {
       width: 243px;
       // height: 50px;
       font-size: 16px;
@@ -216,7 +221,7 @@
         margin-bottom: 30px;
   }
 
-     @media screen and(min-width: 1200px) {
+     @media screen and(min-width: 1280px) {
       width: 234px;
       margin-top: 32px;
       margin-bottom: 32px;
@@ -246,7 +251,7 @@
   }
 
   
-     @media screen and(min-width: 1200px) {
+     @media screen and(min-width: 1280px) {
       // width: 134px;
       height: 30px;
       font-size: 16px;
@@ -275,7 +280,7 @@
      /* or 26px */
 
   }
-    @media screen and(min-width: 1200px) {
+    @media screen and(min-width: 1280px) {
       // width: 152px;
       height: 30px;
       font-size: 16px;
@@ -289,7 +294,7 @@
       margin-bottom: 16px;
 }
 
-      @media screen and(min-width: 1200px) {
+      @media screen and(min-width: 1280px) {
       margin-bottom: 15px;
 
 }
