на кнопках убрал бордер и спозиционировал изображение

--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -1,9 +1,9 @@
 .header {
-    padding-top: 6px;
+  padding-top: 6px;
   z-index: 10;
   width: 100%;
-   position: absolute;
- 
+  position: absolute;
+
   .header-container {
     display: flex;
     justify-content: space-between;
@@ -26,65 +26,57 @@
   display: flex;
   align-self: center;
   .buy {
-  display: none;
-}
+    display: none;
+    border: none;
+    outline: none;
+  }
 }
 .burger-menu {
   padding: 0;
   background-color: inherit;
   border: none;
   fill: $text-red-color;
-
+  border: none;
+  outline: none;
 }
 .buy {
-    width: 160px;
-    height: 44px;
-    border-radius: 22px;
-    background: $text-white-color;
-    border: none;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;
+  width: 160px;
+  height: 44px;
+  border-radius: 22px;
+  background: $text-white-color;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  color: $text-red-color;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background: #ecebeb;
+  }
+  .buy-arrow {
+    width: 7px;
+    height: 10px;
+    fill: $text-red-color;
+    margin-left: 12px;
+  }
+}
+.nav-link {
+  color: $text-white-color;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-decoration: none;
+  &:hover,
+  &:focus {
     color: $text-red-color;
-    cursor: pointer;
-
-    &:hover,
-    &:focus {
-      background: #ecebeb;
-    }
-    .buy-arrow {
-
-width: 7px;
-height: 10px;
-fill: $text-red-color;
-margin-left: 12px;
-    }
-
   }
-  .nav-link {
-    color: $text-white-color;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;
-    text-decoration: none;
-    &:hover,
-    &:focus {
-      color: $text-red-color;
-    }
-  }
-// @media screen and (min-width: 480px) {
-//   .header {
-//     .header-container {
-//       width: 480px;
-//     }
-//   }
-// }
+}
 
 @media screen and (min-width: 768px) {
   .header {
     padding-top: 37px;
-    // .header-container {
-    // }
   }
 
   .burger-menu {
@@ -92,7 +84,7 @@ margin-left: 12px;
   }
   .menu-box .buy {
     display: block;
-      }
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -111,5 +103,4 @@ margin-left: 12px;
       margin-right: 35px;
     }
   }
-  
 }
