--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,15 +1,17 @@
+.hero-img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.button {
+  border: none;
+  outline: none;
+}
 .hero {
   background: $bg-hero-color;
   position: relative;
 
-  .hero-img {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-  }
-
   .header-container {
-    position: relative;
     height: 502px;
   }
 }
@@ -78,7 +80,7 @@
   }
 }
 
-.hero-item+.hero-item .button {
+.hero-item + .hero-item .button {
   background: $text-white-color;
   color: $text-red-color;
 
@@ -96,10 +98,11 @@
   padding-right: 32px;
 
   justify-content: flex-end;
-  background-image: radial-gradient(circle closest-corner at 70% 50%,
-      $text-pink-color 65%,
-      transparent 50%);
-
+  background-image: radial-gradient(
+    circle closest-corner at 70% 50%,
+    $text-pink-color 65%,
+    transparent 50%
+  );
 
   .hero-main-img {
     display: inline-block;
@@ -107,12 +110,6 @@
     height: auto;
   }
 }
-
-// @media screen and (min-width: 480px) {
-//   .hero-container {
-//     width: 480px;
-//   }
-// }
 
 @media screen and (min-width: 768px) {
   .hero {
@@ -122,6 +119,7 @@
     }
 
     .header-container {
+      position: relative;
       padding: 0 34px;
       display: flex;
       height: 399px;
@@ -158,10 +156,13 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    background-image: radial-gradient(circle closest-corner at 64% 45%, #ffa5ba 68%, transparent 50%);
+    background-image: radial-gradient(
+      circle closest-corner at 64% 45%,
+      #ffa5ba 68%,
+      transparent 50%
+    );
 
     .hero-main-img {
-
       margin-left: 0;
       max-width: 143px;
     }
@@ -181,7 +182,6 @@
   .hero-description {
     align-items: flex-end;
     display: flex;
-
   }
 
   .hero-description-section {
@@ -244,7 +244,6 @@
     top: 0;
     right: 0;
     transform: translateX(45%) translateY(-10%);
-
   }
 
   .counter-description {
@@ -279,7 +278,6 @@
     margin-right: auto;
 
     .hero-img {
-
       left: 286px;
     }
 
@@ -320,7 +318,11 @@
     width: 538px;
     height: 613px;
     padding-right: 183px;
-    background-image: radial-gradient(circle closest-corner at 60% 43%, #ffa5ba 67%, transparent 50%);
+    background-image: radial-gradient(
+      circle closest-corner at 60% 43%,
+      #ffa5ba 67%,
+      transparent 50%
+    );
 
     .hero-main-img {
       margin-left: 119px;
