--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -49,7 +49,7 @@
   font-size: 12px;
   line-height: 1.833;
   letter-spacing: 0.04em;
-  color: #000000;
+  color: var(--primary-black-color);
   margin-bottom: 10px;
 }
 .contacts-text {
@@ -90,27 +90,30 @@
   align-items: center;
   border: transparent;
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.location {
   margin-bottom: 12px;
-   background: #d41443;
-   color: #ffffff;
+   background-color: #d41443;
+   color: var(--primary-white-color);
 }
   &.franchise {
   margin-bottom: 12px;
-   background: #ffffff;
+   background-color:  var(--primary-white-color);
    color:#d41443;
 }
 }
-
 
 .contacts-icon {
   width: 5px;
   height: 8px;
   margin-left: 13px;
   .contacts-btn.location &{
-  stroke: #ffffff;
-  fill: #ffffff;
+  stroke: var(--primary-white-color);
+  fill:  var(--primary-white-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contacts-btn.franchise &{
   stroke: #d41342;
@@ -120,7 +123,7 @@
 
  .contacts-btn:hover,
  .contacts-btn:focus {
-  background: #ECEBEB;
+  background: var(--white-btn-hover);
   color: #D41443;
 
   & .contacts-icon,
