--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -6,8 +6,12 @@
      #FFF5F6 88%);   
 }
 .contacts-card { 
-    margin-bottom: 20px;
-    display: block;
+margin-bottom: 20px;
+display: block;
+max-width: 460px;
+margin-left: auto;
+margin-right: auto;
+width: 100%;
     &:last-child {
         margin-bottom: 54px;
     }
@@ -15,14 +19,10 @@
 /*стили для первой лишки*/
 .contacts-list {
 background-color: $text-white-color;
-max-width: 460px;
-width: 100%;
-
 box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
 border-radius: 24px;
 padding-top: 43px;
-margin-left: auto;
-margin-right: auto;
+
 }
 .contacts-category-cafe {
 font-family: DM Sans;
@@ -36,7 +36,7 @@ color: $text-white-color;
 background-color: $bg-coffee-color;
 width: 80px;
 border-radius: 4px;
-margin-left: 20px;
+
 margin-bottom: 25px;
 }
 .contacts-city {
@@ -66,6 +66,8 @@ margin-left: 20px;
 border-bottom: 1px solid $bg-border-color; 
 width: 179px;
 padding-bottom: 25px;
+margin-right: auto;
+margin-left: auto;
 }
 /*стили для второй лишки*/
 .contacts-schedule {
@@ -74,6 +76,8 @@ margin-top: 25px;
 padding-bottom: 25px;
 border-bottom: 1px solid $bg-border-color;
 width: 179px;
+margin-right: auto;
+margin-left: auto;
 }
 .contacts-category-food {
 font-family: DM Sans;
@@ -84,7 +88,6 @@ line-height: 22px;
 letter-spacing: 0.04em;
 text-align: center;
 color: $text-white-color;
-margin-left: 20px;
 background-color: $bg-shakes-color;
 width: 130px;
 border-radius: 4px;
@@ -122,11 +125,13 @@ font-style: normal;
 font-weight: 500;
 line-height: 18px;
 letter-spacing: 0em;
-text-align: left;  
-margin-left: 20px;
+ 
+margin-left: auto;
+margin-right: auto;
 margin-top: 25px;
 list-style: none;
 padding-bottom: 43px;
+max-width: 179px;
 }
 .contacts-link {
 text-decoration: none;
@@ -153,6 +158,7 @@ height: 44px;
 display: block;
 margin: 0  auto;
 margin-bottom: 10px;
+border: none;
 }
 .contacts-button-franchise {
 font-family: DM Sans;
@@ -170,6 +176,7 @@ padding-right: 17px;
 height: 44px;
 display: block;
 margin: 0 auto;
+border: none;
 
 }
 .contacts-white-icon {
@@ -223,14 +230,12 @@ margin-left: 8px;
 .contacts-category-cafe {
 font-size: 16px;
 line-height: 30px;
-margin-left: 31px;
 margin-bottom: 30px;
 width: 73px;
 }
 .contacts-category-food {
 font-size: 16px;
 line-height: 30px; 
-margin-left: 31px;
 margin-bottom: 30px;  
 width: 138px;
 }
@@ -354,14 +359,12 @@ margin-left: 14px;
 .contacts-category-cafe {
     font-size: 16px;
     line-height: 30px;
-    margin-left: 43px;
     margin-bottom: 32px;
     width: 73px;
     }
     .contacts-category-food {
     font-size: 16px;
     line-height: 30px; 
-    margin-left: 43px;
     margin-bottom: 32px;  
     width: 138px;
     }
