--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -6,6 +6,7 @@ body {
   font-family: 'DM Sans';
   color: #000000;
   background-color: #ffffff;
+  min-width: 320px;
 }
 
 ul,
@@ -44,6 +45,7 @@ img {
   padding-left: 20px;
   padding-right: 20px;
   width: 100%;
+  min-width: 320px;
   // max-width: 480px;
 
   @media screen and(min-width:$mobile) {
