--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,8 +1,11 @@
 .gallery {
-&__section {
-  
-  background-image: linear-gradient(to bottom, $rose-section-color 43%, #fff 43%);
-}
+  &__section {
+    background-image: linear-gradient(
+      to bottom,
+      $rose-section-color 43%,
+      #fff 43%
+    );
+  }
 
   &__container {
     max-width: 100%;
@@ -25,7 +28,7 @@
     margin-right: 2px;
 
     @media screen and (min-width: $desktop) {
-    margin-right: 4px;
+      margin-right: 4px;
     }
   }
 
@@ -42,7 +45,7 @@
     border-radius: 10px;
     overflow: hidden;
     transform: scale(1);
-    transition: scale 500ms linear, z-index linear;
+    transition: all 250ms ease-out;
     z-index: 1;
 
     @media screen and (min-width: $tablet) {
@@ -70,7 +73,7 @@
     margin-bottom: 2px;
 
     @media screen and (min-width: $desktop) {
-    margin-bottom: 4px;
+      margin-bottom: 4px;
     }
   }
 }
