--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -91,7 +91,13 @@
     width: 100%;
     color: $white-color;
     font-size: 14px;
+    font-weight: 700;
     line-height: 18px;
+
+    &:hover,
+    &:focus {
+      color: $accent-red-color;
+    }
   }
 }
 
