--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,39 +1,39 @@
-.products{
-    padding-top: 121px;
-    padding-bottom: 98px;
+.products {
+  padding-top: 121px;
+  padding-bottom: 98px;
 
-    @media screen and (min-width:$tablet) {
-        padding-top: 122px;
-        padding-bottom: 112px;
+  @media screen and (min-width: $tablet) {
+    padding-top: 122px;
+    padding-bottom: 112px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 127px;
+    padding-bottom: 119px;
+  }
+
+  &__subtitle {
+    margin-bottom: 15px;
+    font-family: Titan One;
+    font-size: 18px;
+    line-height: 1.17;
+    text-align: center;
+    text-transform: uppercase;
+    color: $rose-text-color;
+
+    @media screen and (min-width: $tablet) {
+      font-size: 26px;
+      line-height: 1.15;
     }
 
-    @media screen and (min-width:$desktop) {
-        padding-top: 127px;
-        padding-bottom: 119px;
+    @media screen and (min-width: $desktop) {
+      font-size: 30px;
+      line-height: 1.13;
+      letter-spacing: 0.04em;
     }
-    
-    &__subtitle{
-        margin-bottom: 15px;
-        font-family: Titan One;
-        font-size: 18px;
-        line-height: 1.17;
-        text-align: center;
-        text-transform: uppercase;
-        color: $rose-text-color;
+  }
 
-        @media screen and (min-width:$tablet) {
-            font-size: 26px;
-            line-height: 1.15;
-        }
-
-        @media screen and (min-width:$desktop) {
-            font-size: 30px;
-            line-height: 1.13;
-            letter-spacing: 0.04em;
-        }
-    }
-
-    &__title{
+  &__title {
     margin-bottom: 144px;
     font-family: Titan One;
     font-size: 34px;
@@ -44,268 +44,268 @@
 
     color: $accent-red-color;
 
-    @media screen and (min-width:$tablet) {
-        margin-bottom: 150px;
-        font-size: 48px;
-        line-height: 1.145;
-        }
-
-    @media screen and (min-width:$desktop) {
-        margin-bottom: 259px;
-        font-size: 58px;
-        line-height: 1.14;
-        letter-spacing: 0.06em;
-        }
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 150px;
+      font-size: 48px;
+      line-height: 1.145;
     }
 
-    &__list{
-        @media screen and (min-width:$tablet) {
-            display: flex;
-            margin: -10px;
-            }
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 259px;
+      font-size: 58px;
+      line-height: 1.14;
+      letter-spacing: 0.06em;
+    }
+  }
 
-        @media screen and (min-width:$desktop) {
-            margin: -12px;
-            }
+  &__list {
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      margin: -10px;
     }
 
-    &__list-item{
-        position: relative;
-        width: 100%;
-        height: 485px;
-        padding-top: 161px;
-        padding-left: 40px;
-        padding-right: 40px;
-        padding-bottom: 41px;
-        border-radius: 24px;
-        text-align: center;
+    @media screen and (min-width: $desktop) {
+      margin: -12px;
+    }
+  }
 
-        @media screen and (max-width:767px) {
-            &:not(:last-child){
-                margin-bottom: 130px;
-            }
-        }
-         
-        @media screen and (min-width:$tablet) {
-            padding-top: 152px;
-            padding-right: 11px;
-            padding-left: 11px;
-            padding-bottom: 40px;
-            margin: 10px;
-            width: calc((100% - 3*20px)/3);
-            }
+  &__list-item {
+    position: relative;
+    width: 100%;
+    height: 485px;
+    padding-top: 161px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 41px;
+    border-radius: 24px;
+    text-align: center;
 
-        @media screen and (min-width:$desktop) {
-            height: 525px;
-            padding-top: 163px;
-            padding-right: 44px;
-            padding-left: 44px;
-            padding-bottom: 50px;
-            margin: 12px;
-        }
+    @media screen and (max-width: 767px) {
+      &:not(:last-child) {
+        margin-bottom: 130px;
+      }
     }
 
-    &__list-item--icecream{
-        background-color: $accent-rose-color;
-
-        &::before {
-           position: absolute;
-           content: " ";
-           display: block;
-           width: 249px;
-           height: 252px;
-           bottom: 346px;
-           left: 50%;
-           transform: translateX(-50%);
-           background-image: url("../images/png/products/mobile/pic1.png");
-           background-repeat: no-repeat;
-           background-size: contain;
-
-           @media screen and (min-device-pixel-ratio: 2),
-           screen and (min-resolution: 192dpi),
-           screen and (min-resolution: 2dppx) {
-           background-image: url('../images/png/products/mobile/pic1@2x.png');
-               } 
-
-        @media screen and (min-width:$tablet) {
-            width: 220px;
-            height: 226px;
-            bottom:363px;
-            background-image: url("../images/png/products/tablet/pic1.png");
-
-            @media screen and (min-device-pixel-ratio: 2),
-           screen and (min-resolution: 192dpi),
-           screen and (min-resolution: 2dppx) {
-           background-image: url('../images/png/products/tablet/pic1@2x.png');
-               } 
-        }
-
-        @media screen and (min-width:$desktop) {
-            width: 335px;
-            height: 335px;
-            bottom:400px;
-            background-image: url("../images/png/products/descktop/pic1.png");
-
-            @media screen and (min-device-pixel-ratio: 2),
-           screen and (min-resolution: 192dpi),
-           screen and (min-resolution: 2dppx) {
-           background-image: url('../images/png/products/descktop/pic1@2x.png');
-               } 
-        }
-        }
+    @media screen and (min-width: $tablet) {
+      padding-top: 152px;
+      padding-right: 11px;
+      padding-left: 11px;
+      padding-bottom: 40px;
+      margin: 10px;
+      width: calc((100% - 3 * 20px) / 3);
     }
 
-    &__list-item--coffee{
-        background-color: $coffee-color;
+    @media screen and (min-width: $desktop) {
+      height: 525px;
+      padding-top: 163px;
+      padding-right: 44px;
+      padding-left: 44px;
+      padding-bottom: 50px;
+      margin: 12px;
+    }
+  }
 
-        &::before {
-            position: absolute;
-            content: " ";
-            display: block;
-            width: 249px;
-            height: 252px;
-            bottom: 346px;
-            left: 50%;
-            transform: translateX(-50%);
-           background-image: url("../images/png/products/mobile/pic2.png");
-            background-repeat: no-repeat;
-            background-size: contain;
+  &__list-item--icecream {
+    background-color: $accent-rose-color;
 
-            @media screen and (min-device-pixel-ratio: 2),
-           screen and (min-resolution: 192dpi),
-           screen and (min-resolution: 2dppx) {
-           background-image: url('../images/png/products/mobile/pic2@2x.png');
-               } 
+    &::before {
+      position: absolute;
+      content: ' ';
+      display: block;
+      width: 249px;
+      height: 252px;
+      bottom: 346px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-image: url('../images/png/products/mobile/pic1.png');
+      background-repeat: no-repeat;
+      background-size: contain;
 
-            @media screen and (min-width:$tablet) {
-                width: 220px;
-                height: 226px;
-                bottom: 363px;
-                background-image: url("../images/png/products/tablet/pic2.png"); 
-               
-                @media screen and (min-device-pixel-ratio: 2),
-                screen and (min-resolution: 192dpi),
-                screen and (min-resolution: 2dppx) {
-                background-image: url('../images/png/products/tablet/pic2@2x.png');
-                    } 
-            }
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/png/products/mobile/pic1@2x.png');
+      }
 
-            @media screen and (min-width:$desktop) {
-                width: 335px;
-                height: 335px;
-                bottom:400px;
-               background-image: url("../images/png/products/descktop/pic2.png");
+      @media screen and (min-width: $tablet) {
+        width: 220px;
+        height: 226px;
+        bottom: 363px;
+        background-image: url('../images/png/products/tablet/pic1.png');
 
-               @media screen and (min-device-pixel-ratio: 2),
-               screen and (min-resolution: 192dpi),
-               screen and (min-resolution: 2dppx) {
-               background-image: url('../images/png/products/descktop/pic2@2x.png');
-                   } 
-            }
-         }
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-image: url('../images/png/products/tablet/pic1@2x.png');
+        }
+      }
+
+      @media screen and (min-width: $desktop) {
+        width: 335px;
+        height: 335px;
+        bottom: 400px;
+        background-image: url('../images/png/products/descktop/pic1.png');
+
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-image: url('../images/png/products/descktop/pic1@2x.png');
+        }
+      }
+    }
+  }
+
+  &__list-item--coffee {
+    background-color: $coffee-color;
+
+    &::before {
+      position: absolute;
+      content: ' ';
+      display: block;
+      width: 249px;
+      height: 252px;
+      bottom: 346px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-image: url('../images/png/products/mobile/pic2.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/png/products/mobile/pic2@2x.png');
+      }
+
+      @media screen and (min-width: $tablet) {
+        width: 220px;
+        height: 226px;
+        bottom: 363px;
+        background-image: url('../images/png/products/tablet/pic2.png');
+
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-image: url('../images/png/products/tablet/pic2@2x.png');
+        }
+      }
+
+      @media screen and (min-width: $desktop) {
+        width: 335px;
+        height: 335px;
+        bottom: 400px;
+        background-image: url('../images/png/products/descktop/pic2.png');
+
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-image: url('../images/png/products/descktop/pic2@2x.png');
+        }
+      }
+    }
+  }
+
+  &__list-item--milkshakes {
+    background-color: $milkshake-color;
+
+    &::before {
+      position: absolute;
+      content: ' ';
+      display: block;
+      width: 249px;
+      height: 252px;
+      bottom: 346px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-image: url('../images/png/products/mobile/pic3.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/png/products/mobile/pic3@2x.png');
+      }
+
+      @media screen and (min-width: $tablet) {
+        width: 220px;
+        height: 226px;
+        bottom: 360px;
+        background-image: url('../images/png/products/tablet/pic3.png');
+
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-image: url('../images/png/products/tablet/pic3@2x.png');
+        }
+      }
+
+      @media screen and (min-width: $desktop) {
+        width: 335px;
+        height: 335px;
+        bottom: 400px;
+        background-image: url('../images/png/products/descktop/pic3.png');
+
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-image: url('../images/png/products/descktop/pic3@2x.png');
+        }
+      }
+    }
+  }
+
+  &__item-title {
+    margin-bottom: 30px;
+    color: $white-color;
+    font-family: Titan One;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 32px;
+      font-size: 30px;
+      line-height: 1.13;
+    }
+  }
+
+  &__dots {
+    position: relative;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 32px;
     }
 
-    &__list-item--milkshakes{
-        background-color: $milkshake-color;
-
-        &::before {
-            position: absolute;
-            content: " ";
-            display: block;
-            width: 249px;
-            height: 252px;
-            bottom: 346px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-image: url("../images/png/products/mobile/pic3.png");
-            background-repeat: no-repeat;
-            background-size: contain;
-
-            @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-            background-image: url('../images/png/products/mobile/pic3@2x.png');
-                } 
-
-         @media screen and (min-width:$tablet) {
-            width: 220px;
-            height: 226px;
-            bottom: 360px;
-            background-image: url("../images/png/products/tablet/pic3.png");
-
-            @media screen and (min-device-pixel-ratio: 2),
-           screen and (min-resolution: 192dpi),
-           screen and (min-resolution: 2dppx) {
-           background-image: url('../images/png/products/tablet/pic3@2x.png');
-               } 
-        }
-
-        @media screen and (min-width:$desktop) {
-            width: 335px;
-            height: 335px;
-            bottom:400px;
-            background-image: url("../images/png/products/descktop/pic3.png");
-
-            @media screen and (min-device-pixel-ratio: 2),
-           screen and (min-resolution: 192dpi),
-           screen and (min-resolution: 2dppx) {
-           background-image: url('../images/png/products/descktop/pic3@2x.png');
-               } 
-        }
-    }    
-}
-
-    &__item-title{
-        margin-bottom: 30px;
-        color: $white-color;
-        font-family: Titan One;
-        font-size: 20px;
-        line-height: 1.15;  
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-
-        @media screen and (min-width:$desktop) {
-            margin-bottom: 32px;
-            font-size: 30px;
-            line-height: 1.13;
-        }
+    &::before,
+    &::after {
+      position: absolute;
+      content: ' ';
+      display: block;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background-color: white;
     }
 
-    &__dots {
-        position: relative;
-        margin-bottom: 30px;
-        margin-left: auto;
-        margin-right: auto;
-        background-color: white;
-        width: 6px;
-        height: 6px;
-        border-radius: 50%;
-
-        @media screen and (min-width:$desktop) {
-            margin-bottom: 32px;
-        }
-
-        &::before,
-        &::after{
-            position: absolute;
-            content: " ";
-            display: block;
-            width: 6px;
-            height: 6px;
-            border-radius: 50%;
-            background-color: white;
-        }
-
-        &::before{
-            right: 10px;
-        }
-
-        &::after{
-            left: 10px;
-        }
+    &::before {
+      right: 10px;
     }
 
-    &__item-description{
+    &::after {
+      left: 10px;
+    }
+  }
+
+  &__item-description {
     max-width: 200px;
     margin-left: auto;
     margin-right: auto;
@@ -317,16 +317,16 @@
     letter-spacing: 0.04em;
     text-align: center;
 
-        @media screen and (min-width:$tablet) {
-            max-width: 198px;
-            margin-bottom: 40px;
-            line-height: 1.76;
-        }
-
-        @media screen and (min-width:$desktop) {
-            min-width: 241px;
-            margin-bottom: 62px;
-            font-size: 16px;
-            }
+    @media screen and (min-width: $tablet) {
+      max-width: 198px;
+      margin-bottom: 40px;
+      line-height: 1.76;
     }
+
+    @media screen and (min-width: $desktop) {
+      min-width: 241px;
+      margin-bottom: 62px;
+      font-size: 16px;
+    }
+  }
 }
