--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -204,6 +204,8 @@
   .photo {
     width: 40px;
     height: 40px;
+    display: block;
+    background-image: url(https://api.time.com/wp-content/uploads/2019/08/better-smartphone-photos.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
