--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -240,17 +240,17 @@
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(219, 236, 220);
-    min-width: 100%;
-    height: 50%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    bottom: 100%;
-    left: 0;
-    top: 50%;
-    border-radius: 24px;
+  display: none;
+  position: absolute;
+  background-color: rgba(233, 204, 126, 0.9);
+  min-width: 100%;
+  height: 50%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  bottom: 100%;
+  left: 0;
+  top: 50%;
+  border-radius: 24px;
 }
 
 .dropdown-description {
@@ -267,7 +267,7 @@
 }
 
 .dropdown:hover .dropdown-content {
-display: block;
+  display: block;
 }
 
 .dropdown:focus-within .dropdown-content {
