--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,47 +1,46 @@
 .section-contacts {
   padding-bottom: 79px;
   max-width: 2000px;
-  background-image: linear-gradient(
-    to bottom,
-    #ffffff 6%,
-    #fff5f6 6%,
-    #fff5f6 88%
-  );
+  background-image: linear-gradient(to bottom,
+      #ffffff 6%,
+      #fff5f6 6%,
+      #fff5f6 88%);
 }
 
-.contacts-card { 
-margin-bottom: 20px;
-display: block;
-max-width: 460px;
-margin-left: auto;
-margin-right: auto;
-width: 100%;
-    &:last-child {
-        margin-bottom: 54px;
-    }
+.contacts-card {
+  margin-bottom: 20px;
+  display: block;
+  max-width: 460px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
+  &:last-child {
+    margin-bottom: 54px;
+  }
 }
 
 /*стили для первой лишки*/
 .contacts-list {
-background-color: $text-white-color;
-box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-border-radius: 24px;
-padding-top: 43px;
+  background-color: $text-white-color;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  padding-top: 43px;
 }
 
 .contacts-category-cafe {
-font-family: DM Sans;
-font-size: 12px;
-font-style: normal;
-font-weight: 500;
-line-height: 22px;
-letter-spacing: 0.04em;
-text-align: center;
-color: $text-white-color;
-background-color: $bg-coffee-color;
-width: 80px;
-border-radius: 4px;
-margin-bottom: 25px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: $text-white-color;
+  background-color: $bg-coffee-color;
+  width: 80px;
+  border-radius: 4px;
+  margin-bottom: 25px;
 }
 
 .contacts-city {
@@ -69,41 +68,41 @@ margin-bottom: 25px;
 }
 
 .contacts-item-city {
-margin-left: 20px;  
-border-bottom: 1px solid $bg-border-color; 
-width: 179px;
-padding-bottom: 25px;
-margin-right: auto;
-margin-left: auto;
+  margin-left: 20px;
+  border-bottom: 1px solid $bg-border-color;
+  width: 179px;
+  padding-bottom: 25px;
+  margin-right: auto;
+  margin-left: auto;
 
 }
 
 /*стили для второй лишки*/
 .contacts-schedule {
-margin-left: 20px;
-margin-top: 25px;
-padding-bottom: 25px;
-border-bottom: 1px solid $bg-border-color;
-width: 179px;
-margin-right: auto;
-margin-left: auto;
+  margin-left: 20px;
+  margin-top: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid $bg-border-color;
+  width: 179px;
+  margin-right: auto;
+  margin-left: auto;
 
 
 }
 
 .contacts-category-food {
-font-family: DM Sans;
-font-size: 12px;
-font-style: normal;
-font-weight: 500;
-line-height: 22px;
-letter-spacing: 0.04em;
-text-align: center;
-color: $text-white-color;
-background-color: $bg-shakes-color;
-width: 130px;
-border-radius: 4px;
-margin-bottom: 25px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: $text-white-color;
+  background-color: $bg-shakes-color;
+  width: 130px;
+  border-radius: 4px;
+  margin-bottom: 25px;
 
 }
 
@@ -136,19 +135,19 @@ margin-bottom: 25px;
 
 /*стили для третьей лишки*/
 .contacts-item-link {
-font-family: DM Sans;
-font-size: 12px;
-font-style: normal;
-font-weight: 500;
-line-height: 18px;
-letter-spacing: 0em;
- 
-margin-left: auto;
-margin-right: auto;
-margin-top: 25px;
-list-style: none;
-padding-bottom: 43px;
-max-width: 179px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
+  list-style: none;
+  padding-bottom: 43px;
+  max-width: 179px;
 }
 
 .contacts-link {
@@ -162,41 +161,44 @@ max-width: 179px;
 }
 
 .contacts-button-locations {
-font-family: DM Sans;
-font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: 21px;
-letter-spacing: 0em;
-text-align: center;
-border-radius: 22px;
-background-color: $bg-button-color;  
-color: $text-white-color;
-padding-left: 17px;
-padding-right: 17px;
-height: 44px;
-display: block;
-margin: 0  auto;
-margin-bottom: 10px;
-border: none;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+  border-radius: 22px;
+  background-color: $bg-button-color;
+  color: $text-white-color;
+  padding-left: 17px;
+  padding-right: 17px;
+  height: 44px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  border: none;
+  cursor: pointer;
 }
+
 .contacts-button-franchise {
-font-family: DM Sans;
-font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: 21px;
-letter-spacing: 0em;
-text-align: center;
-color: $bg-button-color;
-background-color: $text-white-color;
-border-radius: 22px;
-padding-left: 17px;
-padding-right: 17px;
-height: 44px;
-display: block;
-margin: 0 auto;
-border: none;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: $bg-button-color;
+  background-color: $text-white-color;
+  border-radius: 22px;
+  padding-left: 17px;
+  padding-right: 17px;
+  height: 44px;
+  display: block;
+  margin: 0 auto;
+  border: none;
+}
 
 
 .contacts-button-franchise {
@@ -239,12 +241,10 @@ border: none;
 /*базовые стили секции*/
 @media screen and (min-width: 768px) {
   .section-contacts {
-    background-image: linear-gradient(
-      to bottom,
-      #ffffff 10%,
-      #fff5f6 10%,
-      #fff5f6 80%
-    );
+    background-image: linear-gradient(to bottom,
+        #ffffff 10%,
+        #fff5f6 10%,
+        #fff5f6 80%);
   }
 
   .contacts-main-list {
@@ -276,48 +276,55 @@ border: none;
 
   /*Стили для первой лишки*/
 
-.contacts-category-cafe {
-font-size: 16px;
-line-height: 30px;
-margin-bottom: 30px;
-width: 73px;
-}
-.contacts-category-food {
-font-size: 16px;
-line-height: 30px; 
-margin-bottom: 30px;  
-width: 138px;
-}
-.contacts-item-city {
-font-size: 14px;
-line-height: 26px; 
-margin-left: 31px;
-width: 157px;
-padding-bottom: 30px;
-}
-.contacts-text {
-font-size: 14px;
-line-height: 23px;  
-width: 145px; 
-margin-top: 14px;
-}
-/*Стили для второй лишки*/
-.contacts-schedule {
-margin-left: 31px;
-margin-top: 30px;
-border-bottom: 1px solid $bg-border-color;
-padding-bottom: 30px;
-width: 157px;
-}
-.contacts-week {
-font-size: 14px;
-line-height: 26px; 
-}
-.contacts-time {
-font-size: 14px;
-line-height: 26px;  
-margin-bottom: 16px;
-  &:last-child {
+  .contacts-category-cafe {
+    font-size: 16px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    width: 73px;
+  }
+
+  .contacts-category-food {
+    font-size: 16px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    width: 138px;
+  }
+
+  .contacts-item-city {
+    font-size: 14px;
+    line-height: 26px;
+    margin-left: 31px;
+    width: 157px;
+    padding-bottom: 30px;
+  }
+
+  .contacts-text {
+    font-size: 14px;
+    line-height: 23px;
+    width: 145px;
+    margin-top: 14px;
+  }
+
+  /*Стили для второй лишки*/
+  .contacts-schedule {
+    margin-left: 31px;
+    margin-top: 30px;
+    border-bottom: 1px solid $bg-border-color;
+    padding-bottom: 30px;
+    width: 157px;
+  }
+
+  .contacts-week {
+    font-size: 14px;
+    line-height: 26px;
+  }
+
+  .contacts-time {
+    font-size: 14px;
+    line-height: 26px;
+    margin-bottom: 16px;
+
+    &:last-child {
 
       margin-bottom: 0px;
     }
@@ -369,9 +376,9 @@ margin-bottom: 16px;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-  screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px),
-  screen and (min-resolution: 192dpi) and (min-width: 1280px),
-  screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px),
+screen and (min-resolution: 192dpi) and (min-width: 1280px),
+screen and (min-resolution: 2dppx) and (min-width: 1280px) {
   .section-contacts {
     background-image: url('../images/desk-contactst-fon@2x.png');
   }
@@ -423,8 +430,8 @@ margin-bottom: 16px;
 
   .contacts-category-food {
     font-size: 16px;
-    line-height: 30px; 
-    margin-bottom: 32px;  
+    line-height: 30px;
+    margin-bottom: 32px;
     width: 138px;
   }
 
