--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -50,7 +50,9 @@
         z-index: 1;
         margin-bottom: 20px;
         @media screen and (min-width: 1280px) {
+          // margin-bottom: 25px;
           margin-bottom: 25px;
+          padding-top: 22px
         }
     }
 
@@ -129,10 +131,10 @@
     // transform: translate(-50%, -50%);
     // z-index: 1000;
     @media screen and (min-width: 768px) {
-      right: 2%;
+      right: 4%;
     }
     @media screen and (min-width: 1280px) {
-      right: 6%;
+      right: 3%;
     }
 }
 
@@ -141,8 +143,10 @@
    
     position: absolute;
     bottom: 8%;
-    left: 3%;
-    // transform: translate(-50%, -50%);
+    left: 5%;
+    @media screen and (min-width: 1280px) {
+      left: 0%;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
@@ -160,8 +164,8 @@
     .container_hero  {
 
         // padding-right: 34px;
-        padding-left: 70px;
-        padding-right: 70px;
+        padding-left: 36px;
+        padding-right: 0;
         //было 70 позиционирование кружков - 18пс ........................
         padding-top: 83px;
             max-width: 1120px;
@@ -176,11 +180,11 @@
     padding-top: 110px;
 
     @media screen and (min-width: 768px) {
-      padding-top: 15px;
+      padding-top: 11px;
     }
 
     @media screen and (min-width: 1280px) {
-      padding-top: 84px;
+      padding-top: 74px;
     }
 }
 
@@ -193,6 +197,7 @@
 // Валентина
 
 .coutn-wraper {
+  padding-right: 10px;
   @media screen and (max-width: 767px) {
     display: none;
   }
