--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -31,14 +31,14 @@
       background-image: url(../images/3-about/mobile/milk-backgound-mobile@3x.png);
     }
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     & {
       background-image: url(../images/3-about/desctop/milk-background-desctop.png);
       background-position: 0 100%;
     }
-    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-      screen and (min-resolution: 192dpi) and (min-width: 1280px),
-      screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+      screen and (min-resolution: 192dpi) and (min-width: 1200px),
+      screen and (min-resolution: 2dppx) and (min-width: 1200px) {
       background-image: url(../images/3-about/desctop/milk-background-desctop@2x.png);
     }
 
@@ -62,14 +62,15 @@
   color: var(--pink);
   margin-bottom: 15px;
   @media screen and (max-width: 767px) {
+    
     font-size: 18px;
     line-height: 1.166;
   }
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-size: 26px;
     line-height: 1.153;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 30px;
     line-height: 1.133;
   }
@@ -80,7 +81,8 @@
   text-transform: uppercase;
   color: var(--dark-pink);
   @media screen and (max-width: 767px) {
-    max-width: 200px;
+    width: 100%;
+    
     font-size: 34px;
     line-height: 1.147;
     letter-spacing: 0.04em;
@@ -88,24 +90,26 @@
     margin-right: auto;
     margin-bottom: 26px;
   }
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-size: 48px;
     line-height: 1.145;
     margin-bottom: 50px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 58px;
     line-height: 1.137;
     margin-bottom: 55px;
   }
 }
 .about-img-cow {
+  margin-right: auto;
+  margin-left: auto;
   @media screen and (max-width: 767px) {
     & {
       margin-bottom: 46px;
     }
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-right: 40px;
   }
 }
@@ -114,19 +118,21 @@
   text-align: left;
   @media screen and (max-width: 767px) {
     & {
-      max-width: 235px;
+      padding-left: 20px;
+      padding-right: 20px;
+      min-width: 100px;
       margin-left: auto;
       margin-right: auto;
     }
   }
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     & {
       width: 350px;
       padding-left: 10px;
       padding-top: 25px;
     }
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding-right: 10px;
     width: 460px;
     padding-left: 34px;
@@ -147,14 +153,14 @@
       margin-bottom: 17px;
     }
   }
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     & {
       font-size: 14px;
       line-height: 1.785;
       margin-bottom: 62px;
     }
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     
     font-size: 14px;
     line-height: 1.928;
