--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,25 +2,28 @@
   width: 100%;
   margin: 0 auto;
 
-  // outline: 2px solid coral;
+  outline: 2px solid coral;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (max-width: 479px){
 
     // width: 280px;
     width:87.5vw;
   }
+  @media screen and (min-width: 480px){
+    width: 480px;
+  }
 
   @media screen and (min-width: 768px) {
-    // width: 700px;
-    width:91.146vw;
+    width: 700px;
+    // width:91.146vw;
 
 
   }
 
   @media screen and (min-width: 1200px) {
 
-    // width: 1050px;
-    width:87.5vw;
+    width: 1050px;
+    // width:87.5vw;
 
   }
 }
