--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -6,6 +6,11 @@
   .advantages {
     padding-bottom: 97px;
   }
+  .advantages-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
   .advantages .titles {
     margin: 16px 0 18px 0;
   }
@@ -42,7 +47,7 @@
     margin: 36px 0 18px 0;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .advantages {
     padding-bottom: 139px;
   }
