--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -64,6 +64,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   & .titles {
     min-width: 100px;
+    text-align: center;
   }
 }
 .modal-discrption-text {
