--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -6,21 +6,21 @@
 
   @media screen and (min-width: 320px) {
 
-    // width: 280px;
-    width:87.5vw;
+    width: 280px;
+    // width:87.5vw;
   }
 
   @media screen and (min-width: 768px) {
-    // width: 700px;
-    width:91.146vw;
+    width: 700px;
+    // width:91.146vw;
 
 
   }
 
   @media screen and (min-width: 1200px) {
 
-    // width: 1050px;
-    width:87.5vw;
+    width: 1050px;
+    // width:87.5vw;
 
   }
 }
