начал работу над хедером

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .page-header {
-  position: absolute;
+  // position: absolute;
+  // transform: translate();
   background: transparent;
 
   & .container {
@@ -22,10 +23,10 @@
 }
 
 .logo-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translateY(17%);
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // transform: translateY(17%);
   width: 50px;
   height: 50px;
 }
