--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -70,7 +70,7 @@
     height: 14px;
   }
   .mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
+    transform: translateY(0%);
   }
   .mobile-menu {
     height: 100vh;
@@ -78,8 +78,8 @@
     position: absolute;
     width: 100%;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
+    overflow-y: scroll;
+    transform: translateY(-100%);
     background-color: var(--modal-bg-color);
     transition: transform 500ms linear;
     position: fixed;
@@ -131,19 +131,18 @@
     padding-top: 37px;
 
     .mobile-menu {
-      min-height: 400px;
+      overflow-y: scroll;
       z-index: 101;
       height: 100vh;
       position: fixed;
       width: 100%;
       top: 0;
-      left: 50%;
-      transform: translateX(-50%) translateY(-100%);
+      transform: translateY(-100%);
       background-color: var(--modal-bg-color);
       transition: transform 500ms linear;
 
       &.is-open {
-        transform: translateX(-50%) translateY(0%);
+        transform: translateY(0%);
       }
       .basic-button {
         margin: 60px auto 19px;
@@ -303,7 +302,7 @@
     }
   }
   .mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
+    transform: translateY(0%);
   }
   .mobile-menu {
     height: 100vh;
@@ -311,8 +310,7 @@
     position: absolute;
     width: 100%;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
+    transform: translateY(-100%);
     background-color: var(--modal-bg-color);
     transition: transform 500ms linear;
     position: fixed;
