--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -112,9 +112,8 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et
               </p>
-
-              <a class="title-but-link link" href="">
-                <svg class="title-button-icon" width="18" height="18">
+              <a class="title-but-link link" href="#contact">
+                <svg class="title-button-icon">
                   <use href="./images/sprite.svg#right"></use>
                 </svg>
               </a>
@@ -133,6 +132,8 @@
                 ./images/hero-header/desktop-ice-cream.webp    1x,
                 ./images/hero-header/desktop-ice-cream@2x.webp 2x
               "
+              width="236"
+              height="555"
               media="(min-width: 1280px)"
               type="image/webp"
             />
@@ -151,6 +152,7 @@
               media="(min-width: 768px)"
               type="image/webp"
             />
+
             <source
               srcset="
                 ./images/hero-header/tablet-ice-cream.png    1x,
